--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,16 @@
         android:theme="@style/Theme.AlFathhLaundry"
         tools:targetApi="31">
         <activity
-            android:name=".RvShowData"
+            android:name=".AddEditGroupActivity"
             android:exported="false" />
         <activity
             android:name=".ShowDataActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ItemDataPelangganActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FormDataSiswaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FormDataGrupActivity"
             android:exported="false" />
         <activity
             android:name=".AddEditDataCustomerActivity"
             android:exported="false" />
         <activity
             android:name=".SearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TambahGrupActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
